--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Francis Derosier - Portfolio</title>
-        <link rel="stylesheet" href="./assets/css/reset.css" />
-        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./Assets/css/reset.css" />
+        <link rel="stylesheet" href="./Assets/css/style.css" />
     </head>
 
     <body>
@@ -57,7 +57,7 @@
             </a>
             <section id="soon" class="blocks">
                 <h2>Coming Soon</h2>
-                <img id="screenshot3" src="./Images/frankie selfie.PNG" alt="dashboard image of course homepage" />
+                <img id="selfie" src="./Images/frankie selfie.PNG" alt="dashboard image of course homepage" />
             </section>
           </div>
         </main>
